# PrismAPI

./: .gitignore  README.md  env_example.txt  prisma_template_guide.Rmd  similar_words.py
APIs/PubMed_API_Resources_and_Tutorials/: PubMed_API.ipynb  env_templ_file  requirements.txt  systematic_review_results.csv
APIs/Web_of_Science_API_Resources_and_Tutorials/: WoS_API.ipynb  env_template_file  example_wos_processed_results.csv  example_wos_results.csv  wos_processed_results.csv  wos_results.csv
Prisma_Template_Guide/: combined_database_results-deduped.csv  combined_database_results.csv  prisma_template_guide.Rmd
Prisma_Template_Guide/auxillary_scripts/: similar_words.py
Prisma_Template_Guide/csvs/: matrix.csv
SciDir_api/: ._SciDir_API.ipynb
Science_Direct_API_Resources_and_Tutorials/: SciDir_API.ipynb
my_galaxy_agent/: pyproject.toml
my_galaxy_agent/src/my_galaxy_agent/: app.py  client.py
my_galaxy_agent/src/my_galaxy_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
my_review_agent/: pyproject.toml  wos_results.txt
my_review_agent/src/my_review_agent/: actions.py  app.py  client.py  controller.py  models.py  provider.py
my_review_agent/src/my_review_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
